# bevy_mmo

./: Cargo.toml  Trunk.toml  index.html
docs/: bevy_mmo.d.ts  bevy_mmo_bg.wasm.d.ts  index.html
src/: main.rs
web/: bevy_mmo.js
